- implement deal update - implement deal delete - improve ui and ux

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".common.BaseActivity"></activity>
+        <activity android:name=".common.BaseActivity" />
+
         <activity android:name=".deal_listing.ListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".deal_creation.InsertActivity" />
+
+        <activity
+            android:name=".deal_creation.InsertActivity"/>
     </application>
 
 </manifest>
