--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     // Firebase UI
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 
 
